# agents-lab

./: .gitignore
apps/phase1-openai-agents/: README.md  pyproject.toml
apps/phase1-openai-agents/src/jleague-agent/: agent.py  main.py  tools.py
apps/phase2-crewai/: README.md  pyproject.toml
apps/phase2-crewai/src/: crew.py  main.py  tools.py
apps/phase2-crewai/src/config/: agents.yaml  tasks.yaml
apps/phase3-langgraph/: README.md  pyproject.toml
apps/phase3-langgraph/src/: graph.py  main.py
apps/phase4-google-adk/: README.md  pyproject.toml
apps/phase4-google-adk/src/jleague_agent/: agent.py  tools.py
apps/phase5-microsoft-agent-framework/: README.md  pyproject.toml
apps/phase5-microsoft-agent-framework/src/: agent.py  main.py
