[project]
name = "phase5-microsoft-agent-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0",
    "azure-ai-projects>=2.0.1",
    "azure-identity>=1.26.0b2",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.23",
]
